@shachait-Kafka retry configuration for producer and consumer